src/css/layout.css
:root {
  --red: #D15D59;
}
:root {
  --font: 'Patua One', cursive;
}

body {
  margin: 0;
}

.bear-container {
  display: flex;
  width: 50%;
  height: 100vh;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .bear-container {
    width: 80%;
  }
}

.bearimg {
  width: 100%;
  height: auto;
  grid-column: col-start 4 / span 6;
}

.layout-grid {
  display: inline-grid;
  grid-template-columns: repeat(12, [col-start] 1fr);
  grid-template-rows: 1fr [footer] 10rem;
  width: 100%;
  margin: 0;
}

.main {
  grid-column: col-start 3 / span 8;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  flex-wrap: nowrap;
}

.main > div {
  padding-bottom: 5rem;
}

@media only screen and (max-width: 480px) {
  .main {
    grid-column: col-start 2 / span 10;
  }
  .main > div {
    padding-bottom: 2rem;
  }
}

.footer {
  grid-row: footer / 3;
}

.header {
  grid-column: col-start 1 / span 2;
  position: fixed;
  top: 0;
}

.header ul {
  list-style-type: none;
  font-family: var(--font);
  font-size: 1.5rem;
  line-height: 2;
  letter-spacing: 0.125rem;
  color: grey;
}

@media only screen and (max-width: 480px){
  .header {
    bottom: 0.75rem;
    top: auto;
    grid-column: col-start 1 / span 12;
    width: 100%;
    background-color: white;
    box-shadow: 0px -3px 6px rgba(0, 0, 0, 0.05), 0px 3px 6px rgba(0, 0, 0, 0.05);
    z-index: 10;
    border-radius: 40px;
  }
  .header li {
    display: inline;
  }

  .header ul {
    display: flex;
    justify-content: space-around;
    font-size: 1rem;
    padding: 0;
    flex-wrap: nowrap;
  }
}

.header a {
  color: var(--red);
  text-decoration: none;
}

.triangle {
  grid-column: col-start 1 / span 12;
  height: auto;
}

.triangle-container {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
}

.triangle-top {
  background-image: linear-gradient(to bottom right, white 50%, #EDE7DF 50% 100%);
  height: 100vh;
  width: 100%;
}

.triangle-bottom {
  background-image: linear-gradient(to top left, white 50%, #EDE7DF 50% 100%);
  width: 100%;
  height: 100vh;
}

.about-container {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(12, [col-start] 1fr);
}

@media only screen and (max-width: 480px) {
  .about-container {
    grid-template-columns: 1fr;
  }
}

.about-img {
  grid-column: col-start 1 / span 6;
  box-shadow: 1px 2px 8px  rgba(0, 0, 0, .1);
  border-radius: 15px;
}

.about-content {
  grid-column: col-start 8 / span 6;
}

@media only screen and (max-width: 480px) {
  .about-img {
    grid-column: col-start 1 / 2;
    grid-row: row-start 1 / 2;

  }
  .about-content {
    grid-column: col-start 1 / 2;
    grid-row: row-start 2 / 3;
  }
}

.section-title {
  color: var(--red);
  font-family: var(--font);
  font-size: 2rem;
  letter-spacing: 0.125rem;
}

.section-paragraph {
  color: var(--red);
  font-family: 'Lato', sans-serif;
  line-height: 2rem;
  font-size: 1rem;
}

@media only screen and (max-width: 480px) {
  .section-paragraph {
    font-size: 0.8rem;
    line-height: 1.6rem;
  }
}

.skills-container {
  width: 100%;
}

.skills-box {
  background-color: white;
  width: 100%;
  box-shadow: 1px 2px 8px  rgba(0, 0, 0, .1);
  border: 1px solid #eaeaea;
  border-radius: 15px;
  display: flex;
  justify-content: space-around;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
}

.skills-box > div {
  display: block;
  width: 8rem;
  margin-top: 1rem;
  color: var(--red);
  font-family: var(--font);
  text-align: center;
}

.skills-box img {
  width: 4rem;
}

.projects {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 56rem;
}

.project-box {
  display: flex;
  background-color: white;
  box-shadow: 1px 2px 8px  rgba(0, 0, 0, .1);
  border: 1px solid #eaeaea;
  border-radius: 20px;
  margin: 2rem 0rem 2rem 0rem;
  animation-name: fadeInDown;
  animation-duration: 2s;
}

@media only screen and (max-width: 480px) {
  .project-box {
    flex-direction: column;
    height: 40rem;
  }
}

.dashboard-img {
  width: 50%;
  border-radius: 15px 0px 0px 15px;
}

@media only screen and (max-width: 480px) {
  .dashboard-img {
    width: 100%;
    border-radius: 15px 15px 0px 0px;
  }
}

.project-title {
  color: var(--red);
  font-family: var(--font);
  padding: 2rem 0rem 0rem 2rem;

}

.project-paragraph {
  color: var(--red);
  font-family: 'Lato', sans-serif;
  padding: 2rem 0rem 0rem 2rem;
}

.project-copy {
  display: flex;
  flex-direction: column;
  width: 50%;
}

@media only screen and (max-width: 480px) {
  .project-copy {
    font-size: 0.8rem;
    line-height: 1.6rem;
    width: 100%;
  }
}

.loan-img {
  width: 50%;
  border-radius: 0px 15px 15px 0px;
}

@media only screen and (max-width: 480px) {
  .loan-img {
    width: 100%;
    border-radius: 15px 15px 0px 0px;
  }
}

@media only screen and (max-width: 480px) {
  .project-loan {
    flex-direction: column-reverse;
  }
}

.contact-container {
  width: 100%;
  height: 30rem;
  margin-top: 5rem;
}

.skills-carousel-container {
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .skills-carousel-container {
  flex-wrap: nowrap;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
  scroll-snap-type: x mandatory;
  scroll-padding: 50%;
}
}

.skills-card {
  height: 16rem;
  background-color: white;
  width: 12rem;
  box-shadow: 1px 2px 8px  rgba(0, 0, 0, .1);
  border: 1px solid #eaeaea;
  border-radius: 15px;
}

@media only screen and (max-width: 480px) {
  .skills-card {
    flex: 0 0 auto;
    scroll-snap-align: center;
    width: 90%;
    margin-right: 5%;
    margin-left: 2%;
  }
}

.skill-label {
  color: var(--red);
  font-family: var(--font);
  text-align: center;
}

.skills-card img {
  width: 60%;
  padding: 1rem;
}

  .skills-description {
    color: var(--red);
    font-family: 'Lato', sans-serif;
    padding: 2rem 0rem 0rem 2rem;
}

